src/pages/Home/sections/products/products.css
.products_section {
  background: var(--primary-color);
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  font-size: clamp(1.125rem, 2vw, 1.25rem);
  position: relative;
  z-index: 0;
  justify-content: center;
  align-items: center;
  padding-bottom: 5rem;
  padding-top: 18rem;
}

.products_content {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  width: 100%;
  gap: 30px;
  padding-top: 3rem;
  padding-bottom: 8rem;
  align-items: center;
}

.products_fitler-button {
  width: 1080px;
  display: flex;
  justify-content: flex-end;
}

.filters_button {
  /* Uncomment V to activate */
  /* display: none;
  visibility: hidden; */
  justify-content: end;
  background: none;
  border: none;
  font-family: Onest;
  font-size: 14px;
  cursor: pointer;
  position: relative;
}

.filters_button:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 1px;
  background-color: white;
  bottom: -2px;
  left: 0;
  transition: transform .2s ease-out;
}

.filters_button:hover::after {
  transform: scaleX(1);
}

.filters_button::after {
  transform-origin: bottom right;
}

.filters_button:hover::after {
  transform-origin: bottom left;
}

.filter_header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-bottom: 3rem;
}

.filter_header span {
  font-size: 20px;
  color:
    var(--secondary-accent-color);
}

.filter_header button {
  border: none;
  outline: none;
  background: transparent;
  color: white;
  font-size: 14px;
  cursor: pointer;
}

.products_content-card {
  display: flex;
  flex-direction: column;
  justify-content: start;
  position: relative;
  transition: 0.2s ease;
  border-radius: 8px;
  cursor: pointer;
}

.products_content-card::after {
  filter: blur(1rem);
}

.products_description {
  color: white;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  max-width: 380px;
}

.products_description button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: .5rem;
  height: max-content;
  font-size: 14px;
  font-family: Onest;
  width: 100%;
  padding: 8px 16px;
  background: none;
  border: none;
  color: white;
  background-color: var(--blue-light-color);
  border: 1px solid transparent;
  transition: .2s ease-in-out;
  border-radius: 5px;
  cursor: pointer;
}

.products_description button:hover {
  background-color: var(--blue-color);
  border: 1px solid rgba(255, 255, 255, 0.247);
}

img {
  border-radius: 8px;
  border: 1px solid rgba(255, 255, 255, 0.164);
}


.image {
  object-fit: cover;
  border-radius: 8px;
  cursor: pointer;
  max-width: 380px;
  max-height: 480px;
}

.img_box {
  max-width: 420px;
  position: relative;
  border-radius: 8px;
}

.buttonProduct {
  width: 100%;
  display: flex;
  justify-content: end;
  align-items: center;
}

.buttonProduct button {
  border: none;
  outline: none;
  padding: 5px 32px;
  font-family: SwitzerMedium;
  background-color: var(--blue-color);
  font-size: 14px;
  border-radius: 5px;
  cursor: pointer;
  margin-right: 30px;
  margin-bottom: 30px;
  transition: 0.3s ease;
}

.buttonProduct a {
  color: white;
}

.buttonProduct button:hover {
  background-color: var(--blue-light-color);
  transition: 0.3s ease;
}

.products_details {
  display: flex;
  flex-direction: column;
  width: 100%;
}


.products_name {
  font-family: inherit;
  font-weight: 700;
}

.products_price {
  color: rgb(180, 176, 176);
}



@media (width <=768px) {
  .products_content {
    display: flex;
    flex-direction: column;
  }

  .headline p {
    margin-bottom: 3rem;
    line-height: 24px !important;
  }
}

@media (width <=428px) {
  .products_section .products_content-card .content_box {
    height: 65px;
  }

  .singleCardTitle h1 {
    margin-bottom: 0;
  }

  .headline p {
    margin-bottom: 0.7rem;
    line-height: 15px !important;
  }
}

